Fixed overflow problem in textarea

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ main {
 /* INPUT */
 
 textarea {
-    display: block;
+   
 }
 
 .input {
@@ -118,28 +118,11 @@ textarea {
 textarea {
     padding-top: .5rem;
     width: 100%;
-    height: 100%;
+    height: 90%;
+    display: block;
     border: none;
     resize: none;
     outline: none;
-}
-
-@media (min-width: 1024px) {
-    .grid {
-        display: grid;
-        grid-template-areas: 
-        'box1 box1 box2';
-        gap: 1rem;
-    }
-
-    .input {
-        grid-area: box1;
-    }
-
-    .all-stats {
-        margin-top: 0;
-        grid-area: box2;
-    }
 }
 
 /* ALL STATS */
@@ -272,6 +255,24 @@ ul {
     .feature-list {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 1rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .grid {
+        display: grid;
+        grid-template-areas: 
+        'box1 box1 box2';
+        gap: 1rem;
+    }
+
+    .input {
+        grid-area: box1;
+    }
+
+    .all-stats {
+        margin-top: 0rem;
+        grid-area: box2;
     }
 }
 
